kubernetes/gabernetes/apps/authentik/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-authentik
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/ingress-authentik: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-authentik
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-authentik: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "9000"
            - port: "9443"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-authentik: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
  egress:
    - toEndpoints:
        - matchLabels:
            policy.gabe565.com/ingress-authentik: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - toCIDRSet:
        - cidr: 192.168.1.1/32
